sign in doesnt works

--- a/cliente/elements/user-model.html
+++ b/cliente/elements/user-model.html
@@ -42,14 +42,17 @@
           return that.res;
         },
         verifyUser: function (user) {
-          var that= this;
-          doAjax({type: 'GET', url: '/verify' + user.username}, function (result) {
-            console.log(result);
-            that.res = false;
+          var that = this;
+          var resultado1;
+          doAjax({type: 'GET',url: '/verify/' + user.username +'/' +user.passwd}, function (result) {
+           /*that.res = true;
+           console.log(result);*/
+             resultado1=result;
           }, function (error) {
-            that.res = true;
+            //that.res = false;
           });
-          return that.res;
+          console.log(resultado1);
+            return resultado;
         }
       });
     }());
