--- a/cliente/pages/second-page.html
+++ b/cliente/pages/second-page.html
@@ -1,174 +1,179 @@
 <polymer-element name="login-page">
 
-  <template>
-    <style>
-      :host {
-      }
-      #core_card2 {
-        width: 70%;
-        height: 60%;
-        border-top-left-radius: 2px;
-        border-top-right-radius: 2px;
-        border-bottom-right-radius: 2px;
-        border-bottom-left-radius: 2px;
-        box-shadow: rgba(0, 0, 0, 0.0980392) 8px 8px 8px, rgba(0, 0, 0, 0.0980392) 2px 8px 8px;
-        padding: 20px;
-        margin: 50px 30px;
-        background-color: #3f7eaa;
-        border-radius: 5px;
-      }
-      #username {
-        margin-bottom: 30px;
-        width: 95%;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 5px;
-        font-size: 15px;
-        background-color: rgb(249, 246, 246);
-      }
-      #passwd {
+    <template>
+        <style>
+            :host {
+            }
+            #core_card2 {
+                width: 70%;
+                height: 60%;
+                border-top-left-radius: 2px;
+                border-top-right-radius: 2px;
+                border-bottom-right-radius: 2px;
+                border-bottom-left-radius: 2px;
+                box-shadow: rgba(0, 0, 0, 0.0980392) 8px 8px 8px, rgba(0, 0, 0, 0.0980392) 2px 8px 8px;
+                padding: 20px;
+                margin: 50px 30px;
+                background-color: #3f7eaa;
+                border-radius: 5px;
+            }
+            #username {
+                margin-bottom: 30px;
+                width: 95%;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 5px;
+                font-size: 15px;
+                background-color: rgb(249, 246, 246);
+            }
+            #passwd {
 
-        width: 95%;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 5px;
-        font-size: 15px;
-        background-color: rgb(249, 246, 246);
-      }
-      #email {
-        margin-bottom: 30px;
-        width: 95%;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 5px;
-        font-size: 15px;
-        background-color: rgb(249, 246, 246);
-      }
-      #email2 {
+                width: 95%;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 5px;
+                font-size: 15px;
+                background-color: rgb(249, 246, 246);
+            }
+            #email {
+                margin-bottom: 30px;
+                width: 95%;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 5px;
+                font-size: 15px;
+                background-color: rgb(249, 246, 246);
+            }
+            #email2 {
 
-        width: 95%;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-top: 5px;
-        font-size: 15px;
-        background-color: rgb(249, 246, 246);
-      }
-      #enter {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding-top: 5px;
-        width: 100%;
-        height: 30px;
-        color: rgb(255, 255, 255);
-      }
-      #invalid{
-        visibility:hidden;
-        color: black;
-        margin-bottom: 10px;
-        text-align: center;
-      }
-      core-input#invalid /deep/ input{
-        text-align: center;
-      }
-      p{
-        font-size: 80%;
-        margin-bottom: 15px;
-      }
+                width: 95%;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 5px;
+                font-size: 15px;
+                background-color: rgb(249, 246, 246);
+                margin-bottom: 30px;
+            }
+            #enter {
+                margin-bottom: 10px;
+                padding-top: 5px;
+                width: 100%;
+                height: 30px;
+                color: rgb(255, 255, 255);
+                text-transform: none;
+                font-size:25px;
+            }
+            #invalid{
+                visibility:hidden;
+                color: black;
+                margin-bottom: 10px;
+                text-align: center;
+                margin-top: 10px;
+            }
+            core-input#invalid /deep/ input{
+                text-align: center;
+            }
+            p{
+                font-size: 80%;
+                margin-bottom: 15px;
+            }
 
-    </style>
-    <user-model id="userModel"></user-model>
-    <core-card id="core_card2" layout vertical center>
-      <paper-input label="User..." id="username" layout vertical on-blur="{{checkNameExists}}" on-keyup="{{ keypressHandler }}" ></paper-input>
-      <paper-input type="password" label="Password..." id="passwd" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
-      <p>Password must constains letters and numbers</p>
-      <paper-input label="Email..." id="email" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
-      <paper-input label="Repeat Email..." id="email2" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
-      <paper-button label="Send" id="enter" on-tap="{{keypressHandler}}" center center-justified ></paper-button>
-      <div><core-input center-justified readonly value="" id="invalid"></core-input></div>
-    </core-card>
-  </template>
-  <script>
-    Polymer({
-      handleSaveUser: function () {
-        if (this.checkNameExists(this.$.username.value)) {
-          var user = {
-            username: this.$.username.value,
-            passwd: this.$.passwd.value,
-            email: this.$.email.value
-          };
+        </style>
+        <user-model id="userModel"></user-model>
+        <core-card id="core_card2" layout vertical center>
+            <paper-input label="User..." id="username" layout vertical on-blur="{{checkNameExists}}" on-keyup="{{ keypressHandler }}" ></paper-input>
+            <paper-input type="password" label="Password..." id="passwd" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
+            <p>Password must constains letters and numbers</p>
+            <paper-input label="Email..." id="email" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
+            <paper-input label="Repeat Email..." id="email2" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
+            <div><core-input center-justified readonly value="" id="invalid"></core-input></div>
+            <paper-button label="Send" id="enter" on-tap="{{keypressHandler}}" center center-justified ></paper-button>
+        </core-card>
+    </template>
+    <script>
+        Polymer({
+            handleSaveUser: function () {
+                if (this.checkNameExists(this.$.username.value)) {
+                    var user = {
+                        username: this.$.username.value,
+                        passwd: this.$.passwd.value,
+                        email: this.$.email.value
+                    };
 
-          var result = this.$.userModel.saveUser(JSON.stringify(user));
-          if (result) {
-            this.$.invalid.style.visibility = "visible";
-            this.$.invalid.value = "User created successfully";
-            this.$.invalid.style.color = "white";
-            this.resetValues();
-            setTimeout(function(){ location.hash = "#SignIn"; }, 1000);
-          } else {
-            this.$.invalid.style.visibility = "visible";
-            this.$.invalid.value = "Cannot create user";
-            this.$.invalid.style.color = "white";
-          }
-        } else {
-          this.$.invalid.style.visibility = "visible";
-          this.$.invalid.value = "User already exists";
-        }
-      },
-      checkNameExists: function () {
-        return this.$.userModel.searchUser(this.$.username.value);
-      },
-      keypressHandler: function (event, detail, sender) {
+                    var result = this.$.userModel.saveUser(JSON.stringify(user));
+                    if (result) {
+                        this.$.invalid.style.visibility = "visible";
+                        this.$.invalid.value = "User created successfully";
+                        this.$.invalid.style.color = "white";
+                        this.resetValues();
+                        setTimeout(function () {
+                            location.hash = "#SignIn";
+                        }, 1000);
+                    } else {
+                        this.$.invalid.style.visibility = "visible";
+                        this.$.invalid.value = "Cannot create user";
+                        this.$.invalid.style.color = "white";
+                    }
+                } else {
+                    this.$.invalid.style.visibility = "visible";
+                    this.$.invalid.value = "User already exists";
+                }
+            },
+            checkNameExists: function () {
+                return this.$.userModel.searchUser(this.$.username.value);
+            },
+            keypressHandler: function (event, detail, sender) {
 
-        this.$.invalid.style.visibility = "hidden";
-        var code = event.keyCode;
+                this.$.invalid.style.visibility = "hidden";
+                var code = event.keyCode;
 
-        if (code == 13 || sender.id == "enter") {
-         
-          var username = this.$.username.value;
-          if (this.validateUser() && this.validatePass() && this.validateEmail() && this.verifyEmail(this.$.email2.value)) {
-            this.handleSaveUser();
-          } else if (!this.validateUser()) {
-            this.$.invalid.style.visibility = "visible";
-            this.$.invalid.value = "Invalid user";
-          } else if (!this.validatePass()) {
-            this.$.invalid.style.visibility = "visible";
-            this.$.invalid.value = "Invalid password";
-          } else if (!this.validateEmail()) {
-            this.$.invalid.style.visibility = "visible";
-            this.$.invalid.value = "Invalid e-mail";
-          }
-        }
-      },
-      validateUser: function () {
-        var username = this.$.username.value;
-        return (this.validateField(username, /^[a-zA-Z0-9áéíóúñÁÉÍÓÚÑ_/-]*$/i) && username.length >= 4 && username.length <= 30);
+                if (code == 13 || sender.id == "enter") {
 
-      },
-      validatePass: function () {
-        var password = this.$.passwd.value;
-        return this.validateField(password, /(?!^[0-9]*$)(?!^[a-zA-Z]*$)^([a-zA-Z0-9]{6,16})$/);
-      },
-      validateEmail: function () {
-        var string = this.$.email.value;
-        return this.validateField(string, /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/);
-      },
-      validateField: function (string, pattern) {
-        return string.match(pattern) !== null;
-      },
-      resetValues: function () {
-        this.$.username.value = "";
-        this.$.passwd.value = "";
-        this.$.email.value = "";
-        this.$.email2.value = "";
-      },
-      verifyEmail: function (email) {
-        if (this.$.email.value == email) {
-          return true;
-        } else {
-          this.$.invalid.style.visibility = "visible";
-          this.$.invalid.value = "The emails don't match";
-        }
-      }
-    });
-  </script>
+                    var username = this.$.username.value;
+                    if (this.validateUser() && this.validatePass() && this.validateEmail() && this.verifyEmail(this.$.email2.value)) {
+                        this.handleSaveUser();
+                    } else if (!this.validateUser()) {
+                        this.$.invalid.style.visibility = "visible";
+                        this.$.invalid.value = "Invalid user";
+                    } else if (!this.validatePass()) {
+                        this.$.invalid.style.visibility = "visible";
+                        this.$.invalid.value = "Invalid password";
+                    } else if (!this.validateEmail()) {
+                        this.$.invalid.style.visibility = "visible";
+                        this.$.invalid.value = "Invalid e-mail";
+                    }
+                }
+            },
+            validateUser: function () {
+                var username = this.$.username.value;
+                return (this.validateField(username, /^[a-zA-Z0-9áéíóúñÁÉÍÓÚÑ_/-]*$/i) && username.length >= 4 && username.length <= 30);
+
+            },
+            validatePass: function () {
+                var password = this.$.passwd.value;
+                return this.validateField(password, /(?!^[0-9]*$)(?!^[a-zA-Z]*$)^([a-zA-Z0-9]{6,16})$/);
+            },
+            validateEmail: function () {
+                var string = this.$.email.value;
+                return this.validateField(string, /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/);
+            },
+            validateField: function (string, pattern) {
+                return string.match(pattern) !== null;
+            },
+            resetValues: function () {
+                this.$.username.value = "";
+                this.$.passwd.value = "";
+                this.$.email.value = "";
+                this.$.email2.value = "";
+            },
+            verifyEmail: function (email) {
+                if (this.$.email.value == email) {
+                    return true;
+                } else {
+                    this.$.invalid.style.visibility = "visible";
+                    this.$.invalid.value = "The emails don't match";
+                }
+            }
+        });
+    </script>
 </polymer-element>
