--- a/cliente/elements/user-model.html
+++ b/cliente/elements/user-model.html
@@ -1,54 +1,61 @@
 <link rel = "import" href = "../bower_components/polymer/polymer.html" >
 <polymer-element name = "user-model">
-  <template>
-  </template>
-  <script>
-    (function () {
-      var base = '/user';
-      /* function defaultAjaxErrorHandler(xhr, err, desc) {
-       console.log(xhr, err, desc);
-       var errorToast = document.querySelector('#errorToast');
-       errorToast.text = '[' +xhr.status + '] ' + desc + ': ' + xhr.response;
-       errorToast.show();
-       }
-       */
-      function doAjax(options, success, error) {
-        options.type = options.type || 'GET';
-        options.url = base + (options.url || '');
-        options.dataType = options.dataType || 'json';
-        options.contentType = options.contentType || 'application/json; charset=UTF-8';
-        options.success = success;
-        options.error = (typeof error === 'function') ? error : defaultAjaxErrorHandler;
-        $.ajax(options);
-      }
-      var resultado = false;
-      Polymer('user-model', {
-        saveUser: function (user) {
-          var that = this;
-          doAjax({type: 'POST', data: user}, function (result) {
-            that.res = true;
-          }, function () {
-            that.res = false;
-          });
-          return that.res;
-        },
-        searchUser: function (username) {
-          var that = this;
-          doAjax({type: 'GET', url: '/' + username}, function (result) {
-            that.res = false;
-          }, function (error) {
-            that.res = true;
-          });
-          return that.res;
-        },
-        verifyUser: function (user, callback) {
-          doAjax({type: 'GET', url: '/verify/' + user.username + '/' + user.passwd}, function (result) {
-            callback(result);
-          }, function (error) {
-            callback();
-          });
-        }
-      });
-    }());
-  </script>
+    <template>
+    </template>
+    <script>
+        (function () {
+            var base = '/user';
+            /* function defaultAjaxErrorHandler(xhr, err, desc) {
+             console.log(xhr, err, desc);
+             var errorToast = document.querySelector('#errorToast');
+             errorToast.text = '[' +xhr.status + '] ' + desc + ': ' + xhr.response;
+             errorToast.show();
+             }
+             */
+            function doAjax(options, success, error) {
+                options.type = options.type || 'GET';
+                options.url = base + (options.url || '');
+                options.dataType = options.dataType || 'json';
+                options.contentType = options.contentType || 'application/json; charset=UTF-8';
+                options.success = success;
+                options.error = (typeof error === 'function') ? error : defaultAjaxErrorHandler;
+                $.ajax(options);
+            }
+            var resultado = false;
+            Polymer('user-model', {
+                saveUser: function (user) {
+                    var that = this;
+                    doAjax({type: 'POST', data: user}, function (result) {
+                        that.res = true;
+                    }, function () {
+                        that.res = false;
+                    });
+                    return that.res;
+                },
+                searchUser: function (username) {
+                    var that = this;
+                    doAjax({type: 'GET', url: '/' + username}, function (result) {
+                        that.res = false;
+                    }, function (error) {
+                        that.res = true;
+                    });
+                    return that.res;
+                },
+                verifyUser: function (user, callback) {
+                    doAjax({type: 'GET', url: '/verify/' + user.username + '/' + user.passwd}, function (result) {
+                        callback(result);
+                    }, function (error) {
+                        callback();
+                    });
+                },
+                refresh: function (user) {
+                    doAjax({type: 'PUT', data:user}, function (result) {
+                        console.log("OK")
+                    }, function (error) {
+                        console.log("KO");
+                    });
+                }
+            });
+        }());
+    </script>
 </polymer-element>
