--- a/cliente/index.html
+++ b/cliente/index.html
@@ -31,6 +31,7 @@
     <link rel="import" href="pages/search-page.html">
     <link rel="import" href="pages/profile-page.html">
     <link rel="import" href="pages/signoff-page.html">
+    <link rel="import" href="pages/image-form.html">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 
