--- a/cliente/main-menu.html
+++ b/cliente/main-menu.html
@@ -17,7 +17,7 @@
         border-bottom-right-radius: 2px;
         border-bottom-left-radius: 2px;
         box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;
-        background-image: url(img/Icarus.png);
+        background-image: url(img/textura.jpg);
         background-size: 100% 100%;
         background-repeat: no-repeat;
       }
@@ -26,7 +26,7 @@
         height: 5%;
         color: rgb(255, 255, 255);
         box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 2px;
-        background-color: #3f7eaa;
+        background-color: #023256;
       }
       paper-tabs#paper_tabs /deep/ #ink{
         color: #4996CC;
@@ -45,7 +45,7 @@
       <section hash="SignIn" layout vertical center-center>
         <signin-page></signin-page>
       </section>
-      <section hash="LogIn" layout vertical center-center>
+      <section hash="SingUp" layout vertical center-center>
         <login-page></login-page>
       </section>
       <section id="search" hash="SearchPage">
@@ -70,9 +70,13 @@
       ready: function () {
         this.pages = [
           {name: 'Sign In', id: 'paper_tab', hash: 'SignIn'},
-          {name: 'Log In', id: 'paper_tab1', hash: 'LogIn'}
+          {name: 'Sign Up', id: 'paper_tab1', hash: 'SingUp'}
         ];
-        
+        if (this.route !== "SearchPage"){
+          this.$.core_card.style.height = "95%";
+        } else {
+          this.$.core_card.style.height = "100%";
+        }
       }
     });
 
