--- a/cliente/pages/second-page.html
+++ b/cliente/pages/second-page.html
@@ -14,7 +14,7 @@
                 box-shadow: rgba(0, 0, 0, 0.0980392) 8px 8px 8px, rgba(0, 0, 0, 0.0980392) 2px 8px 8px;
                 padding: 20px;
                 margin: 50px 30px;
-                background-color: #3f7eaa;
+                background-color: #1d649b;
                 border-radius: 5px;
             }
             #username {
@@ -65,7 +65,7 @@
             }
             #invalid{
                 visibility:hidden;
-                color: black;
+                color: #f7f704;
                 margin-bottom: 10px;
                 text-align: center;
                 margin-top: 10px;
@@ -76,6 +76,7 @@
             p{
                 font-size: 80%;
                 margin-bottom: 15px;
+                color: #f7f704;
             }
 
         </style>
